// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createNewLevel > all 1`] = `
{
  "cells": [
    "ooooo",
    "o&&&o",
    "ooooo",
  ],
  "demo": null,
  "height": 3,
  "infotronsNeed": 0,
  "initialFreezeZonks": false,
  "initialGravity": false,
  "maxTitleLength": 23,
  "signature": null,
  "specialPorts": [],
  "title": "                       ",
  "width": 5,
}
`;

exports[`createNewLevel > all 2`] = `
{
  "cells": [
    "&&&&&",
    "&&&&&",
    "&&&&&",
  ],
  "demo": null,
  "height": 3,
  "infotronsNeed": 0,
  "initialFreezeZonks": false,
  "initialGravity": false,
  "maxTitleLength": 23,
  "signature": null,
  "specialPorts": [],
  "title": "                       ",
  "width": 5,
}
`;

exports[`createNewLevel > border 1`] = `
{
  "cells": [
    "ooooo",
    "o   o",
    "ooooo",
  ],
  "demo": null,
  "height": 3,
  "infotronsNeed": 0,
  "initialFreezeZonks": false,
  "initialGravity": false,
  "maxTitleLength": 23,
  "signature": null,
  "specialPorts": [],
  "title": "                       ",
  "width": 5,
}
`;

exports[`createNewLevel > fill 1`] = `
{
  "cells": [
    "▓▓▓▓▓",
    "▓&&&▓",
    "▓▓▓▓▓",
  ],
  "demo": null,
  "height": 3,
  "infotronsNeed": 0,
  "initialFreezeZonks": false,
  "initialGravity": false,
  "maxTitleLength": 23,
  "signature": null,
  "specialPorts": [],
  "title": "                       ",
  "width": 5,
}
`;

exports[`createNewLevel > no options 1`] = `
{
  "cells": [
    "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
  ],
  "demo": null,
  "height": 24,
  "infotronsNeed": 0,
  "initialFreezeZonks": false,
  "initialGravity": false,
  "maxTitleLength": 23,
  "signature": null,
  "specialPorts": [],
  "title": "                       ",
  "width": 60,
}
`;

exports[`createNewLevel > size 1`] = `
{
  "cells": [
    "▓▓▓▓▓",
    "▓   ▓",
    "▓▓▓▓▓",
  ],
  "demo": null,
  "height": 3,
  "infotronsNeed": 0,
  "initialFreezeZonks": false,
  "initialGravity": false,
  "maxTitleLength": 23,
  "signature": null,
  "specialPorts": [],
  "title": "                       ",
  "width": 5,
}
`;

exports[`level > constructor > data 1`] = `
{
  "cells": [
    " ∩&",
    "o@▢",
  ],
  "demo": null,
  "height": 2,
  "infotronsNeed": 42,
  "initialFreezeZonks": true,
  "initialGravity": true,
  "maxTitleLength": 23,
  "signature": null,
  "specialPorts": [
    {
      "freezeEnemies": 1,
      "freezeZonks": 2,
      "gravity": 1,
      "unusedByte": 0,
      "x": 1,
      "y": 0,
    },
  ],
  "title": "-- Lorem ipsum --      ",
  "width": 3,
}
`;

exports[`level > constructor > no params 1`] = `
{
  "cells": [
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
    "                                                            ",
  ],
  "demo": null,
  "height": 24,
  "infotronsNeed": 0,
  "initialFreezeZonks": false,
  "initialGravity": false,
  "maxTitleLength": 23,
  "signature": null,
  "specialPorts": [],
  "title": "                       ",
  "width": 60,
}
`;

exports[`level > resize > simple 1`] = `
{
  "cells": [
    " ∩&▓▓",
    "o@▢ ▓",
    "▓   ▓",
    "▓▓▓▓▓",
  ],
  "demo": null,
  "height": 4,
  "infotronsNeed": 42,
  "initialFreezeZonks": true,
  "initialGravity": true,
  "maxTitleLength": 23,
  "signature": null,
  "specialPorts": [
    {
      "freezeEnemies": 1,
      "freezeZonks": 2,
      "gravity": 1,
      "unusedByte": 0,
      "x": 1,
      "y": 0,
    },
  ],
  "title": "-- Lorem ipsum --      ",
  "width": 5,
}
`;

exports[`level > resize > simple 2`] = `
{
  "cells": [
    " ∩&&⊃",
    "o@▢ ▓",
    "o   ▓",
    "∪▓▓▓▓",
  ],
  "demo": null,
  "height": 4,
  "infotronsNeed": 42,
  "initialFreezeZonks": true,
  "initialGravity": true,
  "maxTitleLength": 23,
  "signature": null,
  "specialPorts": [
    {
      "freezeEnemies": 1,
      "freezeZonks": 2,
      "gravity": 1,
      "unusedByte": 0,
      "x": 1,
      "y": 0,
    },
    {
      "freezeEnemies": 1,
      "freezeZonks": 0,
      "gravity": 1,
      "unusedByte": 0,
      "x": 4,
      "y": 0,
    },
    {
      "freezeEnemies": 1,
      "freezeZonks": 2,
      "gravity": 0,
      "unusedByte": 0,
      "x": 0,
      "y": 3,
    },
  ],
  "title": "-- Lorem ipsum --      ",
  "width": 5,
}
`;
